src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Actual_System_Production__c</fullName>
        <description>Actual Annual Production of Customer&apos;s System</description>
        <inlineHelpText>Actual Annual Production of Customer&apos;s System</inlineHelpText>
        <label>Actual System Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_Updated_Post_Visit__c</fullName>
        <description>Status of Enphase Array in Enlighten Following a MNX Visit</description>
        <inlineHelpText>Status of Enphase Array in Enlighten Following a MNX Visit</inlineHelpText>
        <label>Array Updated Post Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communications__c</fullName>
        <description>Status of Communications</description>
        <inlineHelpText>Status of Communications</inlineHelpText>
        <label>Communications</label>
        <picklist>
            <picklistValues>
                <fullName>Initial – Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial – Email Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial – Left Phone Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial – Spoke Via Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNX Visit – Contacted By Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNX Visit – Contacted Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNX Visit – Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNX Visit – Reschedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrap Up – Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrap Up – Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conversion_Status__c</fullName>
        <label>Conversion Status</label>
        <picklist>
            <picklistValues>
                <fullName>Trying to Reach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Contract Presented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Contract Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Order Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Lifecycle__c</fullName>
        <description>What Stage of the Customer Lifecycle is the Customer for this Case Currently In?</description>
        <inlineHelpText>What Stage of the Customer Lifecycle is the Customer for this Case Currently In?</inlineHelpText>
        <label>Customer Lifecycle</label>
        <picklist>
            <picklistValues>
                <fullName>Not a Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Handoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Handoff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimate_vs_Actual_Production__c</fullName>
        <description>Actual System Production / Estimated System Production</description>
        <formula>IF( OR(ISNULL(Estimated_System_Production__c ),ISNULL(Actual_System_Production__c)),0, Actual_System_Production__c / Estimated_System_Production__c )</formula>
        <inlineHelpText>Actual System Production / Estimated System Production</inlineHelpText>
        <label>Estimate vs Actual Production (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_System_Production__c</fullName>
        <description>Estimated Annual Production of Customer&apos;s System</description>
        <inlineHelpText>Estimated Annual Production of Customer&apos;s System</inlineHelpText>
        <label>Estimated System Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Customer_Contact__c</fullName>
        <description>When did the customer last send us an email?</description>
        <inlineHelpText>When did the customer last send us an email?</inlineHelpText>
        <label>Last Customer Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MNX_Visit_Completed__c</fullName>
        <description>Date MNX Visit Completed</description>
        <inlineHelpText>Date MNX Visit Completed</inlineHelpText>
        <label>MNX Visit Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MNX_Visit_Scheduled__c</fullName>
        <description>Date MNX Visit is Scheduled</description>
        <inlineHelpText>Date MNX Visit is Scheduled</inlineHelpText>
        <label>MNX Visit Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Office__c</fullName>
        <description>Astrum Office for Maintenance (Assigned on Property)</description>
        <formula>TEXT(Property__r.Astrum_Office__c)</formula>
        <inlineHelpText>Astrum Office for Maintenance (Assigned on Property)</inlineHelpText>
        <label>Maintenance Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Payment to Customer Complete</description>
        <inlineHelpText>Payment to Customer Complete</inlineHelpText>
        <label>Payment Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_to_Customer__c</fullName>
        <description>Amount of Payment Related to this Case (if any)</description>
        <inlineHelpText>Amount of Payment Related to this Case (if any)</inlineHelpText>
        <label>Payment to Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_RMAs__c</fullName>
        <description>Number of Pending RMAs</description>
        <inlineHelpText>Number of Pending RMAs</inlineHelpText>
        <label>Pending # RMAs</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <description>The State/Province field from a related record. This prioritizes which related record&apos;s field is used in the following order: Property, Account, Contact</description>
        <formula>IF( !ISBLANK(TEXT(Property__r.Property_State__c)),
   TEXT(Property__r.Property_State__c),
/*ELSE*/
   IF( !ISBLANK(Account.BillingState),
      Account.BillingState,
   /*ELSE*/
      IF( !ISBLANK(Account.ShippingState),
         Account.ShippingState,
      /*ELSE*/
         Contact.MailingState
      )
   )
)</formula>
        <inlineHelpText>The State/Province field from a related record. This prioritizes which related record&apos;s field is used in the following order: Property, Account, Contact</inlineHelpText>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Property Related to this Case</description>
        <inlineHelpText>Customer Property Related to this Case</inlineHelpText>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>SCRB_SalesOrder__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Type_1__c</fullName>
        <description>Sub Type 1</description>
        <inlineHelpText>Sub Type 1</inlineHelpText>
        <label>Sub-Type 1</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Sales Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor - Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor - Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Seeker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Handoff Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRECs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type_2__c</fullName>
        <description>Sub Type 2</description>
        <inlineHelpText>Sub Type 2</inlineHelpText>
        <label>Sub-Type 2</label>
        <picklist>
            <controllingField>Sub_Type_1__c</controllingField>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolarEdge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Power or No Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Leak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Warranty Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enphase Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Information Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Timing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Roof Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Manufacturer&apos;s Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter Manufacturer&apos;s Warranty (Non Enphase)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrum Purchase Warranty (10 Year)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Meter Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Not Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State/County/Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunnova</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type_3__c</fullName>
        <description>Sub Type 3</description>
        <inlineHelpText>Sub Type 3</inlineHelpText>
        <label>Sub-Type 3</label>
        <picklist>
            <controllingField>Sub_Type_2__c</controllingField>
            <picklistValues>
                <fullName>Alert – ACFOOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert - ACVOOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert – DC too Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert – DC to High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert – EMU / Envoy not reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert – GFI trip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert – Grid Gone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert – Micro Inverter failed to report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert – Device produced no power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low/No production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter Skipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systemwide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrum Caused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Act of God</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Caused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Remove and Replace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMU Replace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Login Credentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String Fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter Energy Production Fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Optimizer Shutdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Squirrel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>Sub-Type of Case</description>
        <inlineHelpText>Sub-Type of Case</inlineHelpText>
        <label>Sub-Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>New Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Year Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Meter Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Not Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert - ACFOOR (AC Frequency Out of Range)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert - ACVOOR (AC Voltage Out of Range)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert - DC Too Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert - DC Too High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert - Envoy/EMU Not Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert - GFI Trip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert - Grid Gone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert - Micro-Inverter Failed to Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert - Device Produced No Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Email Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Login Credentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel(s) Showing No Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel(s) Showing Low Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter Skipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County/Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_RMAs__c</fullName>
        <description>Total Number of RMAs on this Case</description>
        <inlineHelpText>Total Number of RMAs on this Case</inlineHelpText>
        <label>Total # RMAs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csmrgp__Subject_Conversation__c</fullName>
        <formula>TRIM(SUBSTITUTE(  SUBSTITUTE(   SUBSTITUTE(  SUBSTITUTE(  SUBSTITUTE( SUBSTITUTE(
Subject, &quot;Fwd:&quot;, &quot;&quot;), &quot;FW:&quot;, &quot;&quot;), &quot;Fw:&quot;, &quot;&quot;),&quot;RE:&quot;, &quot;&quot;), &quot;Re:&quot;, &quot;&quot;),&quot;[Email Loop Protection]&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject Conversation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rstk__Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rstk__SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rstk__case_socontract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Contract</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__case_sowarr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Covered Item</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Customer_Lifecycle__c</columns>
        <columns>Last_Customer_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Billing</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Sub_Type__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Customer_Lifecycle__c</columns>
        <columns>Property__c</columns>
        <columns>Maintenance_Office__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Billing</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Billing</label>
    </listViews>
    <listViews>
        <fullName>Enphase</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Sub_Type__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Customer_Lifecycle__c</columns>
        <columns>Property__c</columns>
        <columns>Maintenance_Office__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Enphase</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Enphase</label>
    </listViews>
    <listViews>
        <fullName>Grants</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Sub_Type__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Customer_Lifecycle__c</columns>
        <columns>Property__c</columns>
        <columns>Maintenance_Office__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Grants</value>
        </filters>
        <label>Grants</label>
    </listViews>
    <listViews>
        <fullName>Guarantees</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Sub_Type__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Customer_Lifecycle__c</columns>
        <columns>Property__c</columns>
        <columns>Maintenance_Office__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Guarantees</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Guarantees</label>
    </listViews>
    <listViews>
        <fullName>Lease</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Sub_Type__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Customer_Lifecycle__c</columns>
        <columns>Property__c</columns>
        <columns>Maintenance_Office__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Lease</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Lease</label>
    </listViews>
    <listViews>
        <fullName>Maintenance</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Sub_Type__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Customer_Lifecycle__c</columns>
        <columns>Property__c</columns>
        <columns>Maintenance_Office__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Maintenance</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Maintenance</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Sub_Type_1__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Property_State__c</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
        <language>en_US</language>
    </listViews>
</CustomObject>